Edited file tyoes

--- a/index.html
+++ b/index.html
@@ -34,31 +34,31 @@
           class="gift g0"
           data-wish="Wishing you peace, love, and lots of laughter this Christmas! 🎁"
         >
-          <img src="./images/g4.png" alt="g0" />
+          <img src="./images/g4.webp" alt="g0" />
         </div>
         <div
           class="gift g1"
           data-wish="Merry Christmas! May Santa bring you someone who gives his sweater for you 🎀"
         >
-          <img src="./images/g1.png" alt="g1" />
+          <img src="./images/g1.webp" alt="g1" />
         </div>
         <div
           class="gift g2"
           data-wish="May the magic of Christmas find you exactly where you are and lift your spirit.✨"
         >
-          <img src="./images/g3.png" alt="g2" />
+          <img src="./images/g3.webp" alt="g2" />
         </div>
         <div
           class="gift g3"
           data-wish="Merry Christmas! Hope your Wi-Fi is stronger than your love life. 🫡"
         >
-          <img src="./images/g3.png" alt="g3" />
+          <img src="./images/g3.webp" alt="g3" />
         </div>
         <div
           class="gift g4"
           data-wish="Wishing you top grades and someone who lets you copy notes. 🌟"
         >
-          <img src="./images/g4.png" alt="g4" />
+          <img src="./images/g4.webp" alt="g4" />
         </div>
       </div>
 
