--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div
           class="gift g3"
-          data-wish="Merry Christmas! Hope your Wi-Fi is stronger than your love life. 🫡"
+          data-wish="The gift of love. The gift of happiness. May all these be yours at Christmas.🫡"
         >
           <img src="./images/g3.webp" alt="g3" />
         </div>
